# OGaBox

./: .gitignore  CMakeLists.txt  LICENSE.md  OGaBox.cfg  README.md
OGa/Drawer/: config.js  drawer.css  index.html
OGa/Drawer/http/: drawer.js  index.html
lib/: .gitignore
src/: Config.cpp  Config.h  Environment.cpp  Environment.h  FileHandler.cpp  FileHandler.h  OGaRequestHandlerFactory.cpp  OGaRequestHandlerFactory.h  OGaRoom.cpp  OGaRoom.h  OGaService.cpp  OGaService.h  OGaServiceContext.cpp  OGaServiceContext.h  OGaUser.cpp  OGaUser.h  OGaUserSocket.cpp  OGaUserSocket.h  OGaWebSocket.cpp  OGaWebSocket.h  OGaWorker.cpp  OGaWorker.h  main.cpp
